--- a/pres/rapid-review.bib
+++ b/pres/rapid-review.bib
@@ -1,3 +1,18 @@
+@article{fog_calculation_2008,
+  title = {Calculation {{Methods}} for {{Wallenius}}' {{Noncentral Hypergeometric Distribution}}},
+  author = {Fog, Agner},
+  year = {2008},
+  month = feb,
+  journal = {Communications in Statistics - Simulation and Computation},
+  volume = {37},
+  number = {2},
+  pages = {258--273},
+  publisher = {{Taylor \& Francis}},
+  issn = {0361-0918},
+  doi = {10.1080/03610910701790269},
+  abstract = {Two different probability distributions are both known in the literature as ``the'' noncentral hypergeometric distribution. Wallenius' noncentral hypergeometric distribution can be described by an urn model without replacement with bias. Fisher's noncentral hypergeometric distribution is the conditional distribution of independent binomial variates given their sum. No reliable calculation method for Wallenius' noncentral hypergeometric distribution has hitherto been described in the literature. Several new methods for calculating probabilities from Wallenius' noncentral hypergeometric distribution are derived. Range of applicability, numerical problems, and efficiency are discussed for each method. Approximations to the mean and variance are also discussed. This distribution has important applications in models of biased sampling and in models of evolutionary systems.},
+  keywords = {62D05,62E15,62H10,65C60,92D15,Biased sampling,Natural selection,Wallenius noncentral hypergeometric distribution}
+}
 
 @article{omara-eves_using_2015,
   title = {Using Text Mining for Study Identification in Systematic Reviews: A Systematic Review of Current Approaches},
@@ -34,5 +49,3 @@
   keywords = {Computational biology and bioinformatics,Computer science,Medical research,SARS-CoV-2},
   file = {/home/max/Zotero/storage/9KTB99R3/van de Schoot et al. - 2021 - An open source machine learning framework for effi.pdf;/home/max/Zotero/storage/LIJG5D22/s42256-020-00287-7.html}
 }
-
-
